# leviathan

./: .gitignore  ARCHITECTURE.md  Cargo.toml  Makefile.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
assets/: architecture-diagram.avif  detection-pipeline.avif  edr-driver-diagram.avif  forensics-map.avif  hook-detection.avif  kernel-comm.avif  leviathan-edr-architecture.avif  mitre-coverage.avif
crates/leviathan-common/: Cargo.toml
crates/leviathan-common/src/: lib.rs
crates/leviathan-driver/: Cargo.toml  build.rs
crates/leviathan-driver/src/: device.rs  ioctl.rs  lib.rs
crates/leviathan-driver/src/callbacks/: image.rs  mod.rs  object.rs  process.rs  registry.rs  thread.rs
crates/leviathan-driver/src/detection/: behavior.rs  heuristics.rs  mod.rs  rules.rs
crates/leviathan-driver/src/filters/: minifilter.rs  mod.rs  network.rs
crates/leviathan-driver/src/forensics/: irp_analysis.rs  memory_scanner.rs  mod.rs  pool_scanner.rs  process_enum.rs
crates/leviathan-driver/src/security/: apc.rs  elam.rs  hooks.rs  integrity.rs  mod.rs
crates/leviathan-driver/src/utils/: comm.rs  etw.rs  memory.rs  mod.rs  sync.rs  timer.rs
