[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/anubhavg-icpl/leviathan"

[workspace.dependencies]
# Windows Driver Kit crates
wdk = "0.4"
wdk-sys = "0.5"
wdk-build = "0.5"
wdk-alloc = "0.4"
wdk-panic = "0.4"
wdk-macros = "0.5"

# Windows API bindings
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_System_IO", "Win32_Security"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = "thin"
codegen-units = 1
opt-level = "z"
