[package]
name = "leviathan-common"
description = "Shared types and constants for Leviathan Windows kernel driver - EDR/XDR framework"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["anubhavg-icpl"]
keywords = ["windows", "kernel", "driver", "edr", "security"]
categories = ["os::windows-apis", "development-tools"]
readme = "../../README.md"

[dependencies]
# No dependencies - pure Rust definitions

[features]
default = []
std = []
