[package]
name = "leviathan-driver"
description = "Windows kernel-mode EDR/XDR driver framework in Rust - callbacks, filters, detection, forensics"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors = ["anubhavg-icpl"]
keywords = ["windows", "kernel", "driver", "edr", "security"]
categories = ["os::windows-apis", "development-tools"]
readme = "../../README.md"

[lib]
crate-type = ["cdylib"]
# Path to driver entry point
path = "src/lib.rs"

[dependencies]
wdk = { workspace = true }
wdk-sys = { workspace = true }
wdk-alloc = { workspace = true }
wdk-panic = { workspace = true }
libm = "0.2"

leviathan-common = { version = "0.1.0", path = "../leviathan-common" }

[build-dependencies]
wdk-build = { workspace = true }

[features]
default = []
nightly = []

# WDK metadata for driver configuration
[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33
